    * 0171 FIX: hp_blade_psu: Fixed pnp template...
    * 0996 FIX: apc_symmetra_test: Handle unknown date of last self test as intended...
    * 0173 FIX: hitachi_hnas_volume: Fixed bug when snmp outputs empty lines
    * 1037 FIX: bintec_info: support bintec RXL12500
    * 0948 FIX: mk_inventory.ps1: increased caching time to 14400, fixed incorrect default cachefile path

    Multisite:
    * 1013 Sort host names naturally, e.g. foobar11 comes after foobar2...
    * 1033 New Mutisite filter for the number of services a host has...
    * 0949 quicksearch: now able to search for multiple hosts at once...
    * 0945 FIX: Sidebar snapin "Problem hosts": Now excludes hosts and services in downtime
    * 1036 FIX: doc/treasures/downtime: fix --url option, better error output

    WATO:
    * 0825 WATO: Hover menu of user online state shows the last seen date/time now
    * 0990 FIX: Fix HTTP error handling in bulk inventory...
    * 1004 FIX: Fix exception when saving rules, caused by empty item
    * 0947 FIX: WATO snapshots: fixed missing files on restoring nagvis backup domains
    * 0826 FIX: Fixed problem where user access times were not updated correctly

    Notifications:
    * 1042 Rule based notifications: allow matching on host groups...

    Reporting & Availability:
    * 0991 FIX: Availability: optionally show time stamps as UNIX epoch time...

    Event Console:
    * 1040 FIX: Avoid sporadic errors when checking event state in Event Console...

    Livestatus:
    * 0988 FIX: livedump: Fix exception in case no contact groups are defined for a service

    HW/SW-Inventory:
    * 0167 FIX: mk_inventory.linux: Changed field separator from pipe to tab...
    * 1005 FIX: Fix exception when using pretty-print output format
    * 0946 FIX: hw/sw inventory: fixed display bug for byte fields with the value 0...


1.2.5i4:
    Core & Setup:
    * 0940 SEC: Fixed various core SIGSEGV when using malformed livestatus queries...

    Checks & Agents: