@@ -2493,16 +2493,17 @@ def transform_printer_supply(l):
 register_check_parameters(
     subgroup_printing,
     "printer_supply",
-    _("Printer cardridge levels"),
+    _("Printer cartridge levels"),
     Transform(
         Tuple(
-              kelp = _("Levels for printer cardridges."),
+              kelp = _("Levels for printer cartridges."),
               elements = [
-                  Float(title = _("Warning remaining")),
-                  Float(title = _("Critical remaining")),
+                  Percentage(title = _("Warning remaining"), allow_int = True, default_value = 20.0),
+                  Percentage(title = _("Critical remaining"), allow_int = True, default_value = 10.0),
                   Checkbox(
-                        title = _("Upturn toner levels" ),
-                        help = _ ("Some Printers (eg. Konica for Drum Cartdiges) returning the available"
+                        title = _("Upturn toner levels"),
+                        label = _("Printer sends <i>used</i> material instead of <i>remaining</i>"),
+                        help =  _("Some Printers (eg. Konica for Drum Cartdiges) returning the available"
                                   " fuel instead of what is left. In this case it's possible"
                                   " to upturn the levels to handle this behavior"
                                  )
@@ -2511,7 +2512,7 @@ register_check_parameters(
              forth = transform_printer_supply,
     ),
     TextAscii(
-        title = _("cardridge specification"),
+        title = _("cartridge specification"),
         allow_empty = True
     ),
     None,
